<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ArethaDemosActivity!</string>
    <string name="app_name">ArethaDemos</string>

    <!-- SectorView -->
    <string name="sector_view">SectorView</string>
    <string name="toggle">Toggle</string>
    <string name="gravity">Gravity</string>
    <string name="radius_plus">Radius+</string>
    <string name="radius_minus">Radius-</string>
    <string name="support_all_views">Support all Views!</string>
    <string name="sector_click">Child %1$s clicked!</string>

    <string-array name="position_item">
        <item>Center</item>
        <item>Bottom Left</item>
        <item>Bottom Right</item>
        <item>Right Top</item>
        <item>Left Top</item>
        <item>Top</item>
        <item>Left</item>
        <item>Bottom</item>
        <item>Right</item>
    </string-array>

    <!-- PageIndicator -->
    <string name="page_indicator">PageIndicator</string>
    <string name="page_plus">Page+</string>
    <string name="page_minus">Page-</string>
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="dot_radius">Dot Radius</string>
    <string name="dot_spacing">Dot Spacing</string>
    <string name="page_change">Page index changed, current index is %1$s!</string>
    <string name="next_page">Next page action callback!</string>
    <string name="prev_page">Previous page action callback!</string>

    <!-- ShelfGallery -->
    <string name="shelf_gallery">Shelf Gallery</string>

    <!-- AccelerateLinearDecelerateProgressBar -->
    <string name="accelerate_linear_decelerate_progressbar">Accelerate Linear Decelerate Progress Bar</string>
    <string name="dot_plus">Dot+</string>
    <string name="dot_minus">Dot-</string>
    <string name="dot_radius_plus">Radius+</string>
    <string name="dot_radius_minus">Radius-</string>
    <string name="space_plus">Space+</string>
    <string name="space_minus">Space-</string>
    <string name="duration_plus">Duration+</string>
    <string name="duration_minus">Duration-</string>
    <string name="yellow">yellow</string>

    <!-- ToggleView -->
    <string name="toggle_view">ToggleView</string>
    <string name="toggle_on">ON</string>
    <string name="toggle_off">OFF</string>

    <!-- Workspace -->
    <string name="workspace">Workspace</string>
    <string name="showing_child">← Try to slide left or right →</string>
    <string name="last_child">You can put any view you want here, if your view can receive TouchEvent, just to call ViewParent.requestDisallowInterceptTouchEvent(boolean disallowIntercept) method to request Workspace not to steal your TouchEvent!</string>
    <string name="back_child">This view is in the background of WorkSpace</string>
    <string name="next_child">→</string>
    <string name="prev_child">←</string>

    <!-- ClickWheelView -->
    <string name="click_wheel_view">ClickWheelView</string>
    <string name="click_wheel_view_radius_plus">Radius+</string>
    <string name="click_wheel_view_radius_minus">Radius-</string>
    <string name="click_wheel_view_enable_fling">Enable Fling</string>
    <string name="click_wheel_view_disable_fling">Disable Fling</string>

    <!-- BitmapEffectBuilder -->
    <string name="bitmap_effect_builder">BitmapEffectBuilder</string>
    <string name="bitmap_effect_builder_original">Original</string>
    <string name="bitmap_effect_builder_highlight_without_original">Highlight without Original</string>
    <string name="bitmap_effect_builder_highlight_with_original">Highlight with Original</string>
    <string name="bitmap_effect_builder_shadow_without_original">Shadow without Original</string>
    <string name="bitmap_effect_builder_shadow_with_original">Shadow with Original</string>
    <string name="bitmap_effect_builder_glow_without_original">Glow without Original</string>
    <string name="bitmap_effect_builder_glow_with_original">Glow with Original</string>
    <string name="bitmap_effect_builder_reflection_without_original">Reflection without Original</string>
    <string name="bitmap_effect_builder_reflection_with_original">Reflection with Original</string>

    <!-- WaveLayout -->
    <string name="wave_layout">WaveLayout</string>
    <string name="wave_layout_a">A</string>
    <string name="wave_layout_b">B</string>
    <string name="wave_layout_c">C</string>
    <string name="wave_layout_d">D</string>
    <string name="wave_layout_e">E</string>
    <string name="wave_layout_f">F</string>
    <string name="wave_layout_g">G</string>
    <string name="wave_layout_h">H</string>
    <string name="wave_layout_i">I</string>
    <string name="wave_layout_j">J</string>
    <string name="wave_layout_k">K</string>
    <string name="wave_layout_l">L</string>
    <string name="wave_layout_m">M</string>
    <string name="wave_layout_n">N</string>
    <string name="wave_layout_o">O</string>
    <string name="wave_layout_p">P</string>
    <string name="wave_layout_q">Q</string>
    <string name="wave_layout_r">R</string>
    <string name="wave_layout_s">S</string>
    <string name="wave_layout_t">T</string>
    <string name="wave_layout_u">U</string>
    <string name="wave_layout_v">V</string>
    <string name="wave_layout_w">W</string>
    <string name="wave_layout_x">X</string>
    <string name="wave_layout_y">Y</string>
    <string name="wave_layout_z">Z</string>
    <string name="wave_layout_position">Position</string>
    <string name="wave_layout_position_dialog_title">Position</string>

    <string-array name="wave_layout_positions">
        <item>Left</item>
        <item>Top</item>
        <item>Right</item>
        <item>Bottom</item>
    </string-array>

    <!-- TileButton -->
    <string name="tile_button">TileButton</string>
    <string name="tile_button_description">Just like the Windows Phone 7, Button has a 3D effects when user touch on it!</string>

</resources>