<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.aretha.widget.AccelerateLinearDecelerateProgressBar
        android:id="@id/accelerateLinearDecelerateProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <com.aretha.widget.TileButton
                android:id="@+id/dot_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/dot_plus" />

            <com.aretha.widget.TileButton
                android:id="@+id/dot_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/dot_minus" />

            <com.aretha.widget.TileButton
                android:id="@+id/space_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/space_plus" />

            <com.aretha.widget.TileButton
                android:id="@+id/space_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/space_minus" />

            <com.aretha.widget.TileButton
                android:id="@+id/radius_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/dot_radius_plus" />

            <com.aretha.widget.TileButton
                android:id="@+id/radius_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/dot_radius_minus" />

            <com.aretha.widget.TileButton
                android:id="@+id/duration_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/duration_plus" />

            <com.aretha.widget.TileButton
                android:id="@+id/duration_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/duration_minus" />

            <com.aretha.widget.TileButton
                android:id="@+id/yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/yellow" />
        </LinearLayout>
    </HorizontalScrollView>

</merge>